k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calendar-admin-service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30002
  selector:
    app: InternRFC-app-calendar-admin
